--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "canon": "^0.4.1",
+    "cannon-es": "^0.20.0",
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
     "three": "^0.160.1"
